# CURSED-RemoteID

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  channelswap.sh  discrete_channel_scan.py  generated.txt  main.py  opendroneid-dissector.lua  pyproject.toml  requirements-dev.txt  requirements.txt  testchannelswap_gpt
.github/workflows/: autopep8.yaml  pre-commit.yaml  super-linter.yaml
dependencies/: opendroneid-dissector.lua
dependencies/nrf_sniffer_for_bluetooth_le_4.1.1/doc/: example.py  example_linux.py
dependencies/nrf_sniffer_for_bluetooth_le_4.1.1/extcap/: nrf_sniffer_ble.py
dependencies/nrf_sniffer_for_bluetooth_le_4.1.1/hex/: sniffer_nrf51dk_nrf51422_4.1.1.hex  sniffer_nrf52dk_nrf52832_4.1.1.hex  (+4 more)
lambda_src/lambda_insert_into_database/: lambda_function.py
raspi_remoteid_receiver/core/: __main__.py  aws_communicator.py  channel_swapper.py  csv_creator.py  helpers.py  packet_logger.py  pcap_reader_pyshark.py  setup_logging.py
raspi_remoteid_receiver/healthcheck/: exceptions.py  healthcheck.py
raspi_remoteid_receiver/tests/: generate_vendor_specific_elements.py  test_csv_compression.py  test_csv_logic.py
src/cursed-remoteid/: __main__.py  aws_communicator.py  channel_swapper.py  csv_creator.py  helpers.py  packet_logger.py  pcap_reader_pyshark.py  setup_logging.py
src/cursed_remote_id/: __main__.py  aws_communicator.py  channel_swapper.py  csv_creator.py  helpers.py  pcap_reader_pyshark.py  setup_logging.py
src/lambda_insert_into_database/: lambda_function.py
src/lambda_update_historical_flights/: lambda_function.py
(+14 files in other folders)
